--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,44 +1,34 @@
-name: Build APK
+name: Build Android APK
 
 on:
   push:
-    branches: [main]
+    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '20'
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-    - name: Install Dependencies
-      run: npm install
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./android/gradlew
 
-    - name: Install Capacitor CLI
-      run: npm install @capacitor/cli @capacitor/core
+      - name: Build APK
+        run: |
+          cd android
+          ./gradlew assembleRelease
 
-    - name: Add Android Platform
-      run: npx cap add android || echo "Android platform exists"
-
-    - name: Copy Web to Android
-      run: npx cap copy
-
-    - name: Build APK
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y openjdk-17
-        export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
-        cd android
-        ./gradlew assembleRelease
-      shell: bash
-
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: DiksEkspressUltimate.apk
-        path: android/app/build/outputs/apk/release/app-release.apk
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: DiksEkspressUltimate-APK
+          path: android/app/build/outputs/apk/release/app-release.apk
